<resources>
    <string name="app_name">数据结构练习</string>

    <!-- 剑指offer -->
    <string name="title_offer_chapter01">第一章 面试的流程</string>
    <string name="title_offer_chapter02">第二章 面试需要的基础知识</string>
    <string name="title_offer_chapter03">第三章 高质量的代码</string>
    <string name="title_offer_chapter04">第四章 解决面试提的思路</string>
    <string name="title_offer_chapter05">第五章 优化时间和空间效率</string>
    <string name="title_offer_chapter06">第六章 面试中的各项能力</string>
    <string name="title_offer_chapter07">第七章 两个面试案例</string>
    <string name="title_offer_chapter08">第八章 英文版新增面试题</string>

</resources>
