<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".offer.OfferEntryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_test1"
                style="@style/btn_style_lower"
                android:text="@string/title_offer_chapter01"/>

            <Button
                android:id="@+id/btn_test2"
                style="@style/btn_style_lower"
                android:text="@string/title_offer_chapter02"/>

            <Button
                android:id="@+id/btn_test3"
                style="@style/btn_style_lower"
                android:text="@string/title_offer_chapter03"/>

            <Button
                android:id="@+id/btn_test4"
                style="@style/btn_style_lower"
                android:text="@string/title_offer_chapter04"/>

            <Button
                android:id="@+id/btn_test5"
                style="@style/btn_style_lower"
                android:text="@string/title_offer_chapter05"/>

            <Button
                android:id="@+id/btn_test6"
                style="@style/btn_style_lower"
                android:text="@string/title_offer_chapter06"/>

            <Button
                android:id="@+id/btn_test7"
                style="@style/btn_style_lower"
                android:text="@string/title_offer_chapter07"/>

            <Button
                android:id="@+id/btn_test8"
                style="@style/btn_style_lower"
                android:text="@string/title_offer_chapter08"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>